@@ -110,6 +110,7 @@ Engine fixes:
 * Fixed entities not entering death state when negative HP regen reduced their HP to 0.
 * Fixed corpses not disappearing into pits when killed with a critical strike.
 * Fixed incorrect speed of repeater powers when using a non-60 FPS cap.
+* Implemented caching for event scripts to avoid repeated loading from disk.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
